release: Momento v0.6.0 enterprise analytics
